# hroshyk

./: .gitignore  manage.py  pyproject.toml
accounts/: admin.py  auth.py  manager.py  middlewares.py  models.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_streamer_balance_alter_streamer_donation_page_and_more.py
donation_page/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
donation_page/migrations/: 0001_initial.py  0002_alter_donationpage_amount_max_and_more.py  0003_donationpage_target_current_amount_and_more.py  0004_alter_donationpage_target_title.py  0005_remove_donationpage_widgets_delete_widget.py  0006_alter_donationpage_page_link.py  0007_remove_donationpage_commision_percent_and_more.py
donation_page/templatetags/: donation_page_filters.py  formatter.py
donations/: filters.py  forms.py  models.py  urls.py  utils.py  views.py
donations/migrations/: 0001_initial.py  0002_alter_donation_amount_alter_donation_message_and_more.py  0002_alter_donation_message.py  0003_alter_donation_amount_alter_donation_message_and_more.py  0004_donation_shown.py
donations/templatetags/: donations_filters.py
hroshyk/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: donation.css  donation_alert.css  donation_page.css  donations.css  header.css  index.css  sidebar.css  viewer_donation_page.css  widget.css
static/js/: donationPage.js  index.js  script.js  toasts.js  (+1 more)
templates/: base.html  cabinet.html  donations.html  header.html  home.html  logo.html
widgets/: admin.py  forms.py  models.py  urls.py  views.py
(+34 files in other folders)
