[tool.poetry]
name = "hroshyk"
version = "0.1.0"
description = "Ukrainian donation platform"
authors = ["Gipss <gissa.dmtr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
django-twitch-auth = "^0.1.0"
requests = "^2.28.2"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
bcrypt = "^4.0.1"
django-debug-toolbar = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
